# localization_and_mapping

./: CMakeLists.txt  README.md  package.xml
esdf_slice_map_publisher/: CMakeLists.txt  README.md  package.xml
esdf_slice_map_publisher/src/: esdf_slice_map_publisher_node.cpp
mapping_tools/offline_global_graph_viz/: package.xml
offline_dense_map_fusion/: CMakeLists.txt  README.md  package.xml
offline_dense_map_fusion/include/offline_dense_map_fusion/: fuser.hpp  session_loader.hpp  types.hpp
offline_dense_map_fusion/src/: exporter.cpp  fuser.cpp  main.cpp  session_loader.cpp
offline_global_graph/: CMakeLists.txt  README.md  package.xml  tag_priors.yaml
offline_global_graph/include/offline_global_graph/: session_loader.hpp  types.hpp
offline_global_graph/src/: debug_main.cpp  exporter.cpp  main.cpp  optimizer.cpp  session_loader.cpp
offline_global_graph_viz/: CMakeLists.txt
offline_global_graph_viz/src/: visualization_node.cpp
online_mapping_logger/: CMakeLists.txt  README.md  package.xml
online_mapping_logger/config/: online_mapping_logger_params.yaml
online_mapping_logger/include/online_mapping_logger/: session_writer.hpp  stamp_buffer.hpp  types.hpp  utils.hpp
online_mapping_logger/scripts/: inspect_logged_session_covariance.py
online_mapping_logger/src/: keyframe_assembler.cpp  online_mapping_logger_node.cpp  session_writer.cpp
ply_pointcloud_viz/: CMakeLists.txt  README.md  package.xml
ply_pointcloud_viz/src/: ply_pointcloud_viz_node.cpp
src/mapping_tools/esdf_slice_map_publisher/: CMakeLists.txt  package.xml
src/mapping_tools/esdf_slice_map_publisher/src/: map_conversion.cpp  map_io.cpp  map_io.hpp
src/mapping_tools/offline_global_graph/: package.xml
src/mapping_tools/offline_global_graph/include/offline_global_graph/: exporter.hpp  types.hpp
src/mapping_tools/offline_global_graph_viz/: README.md  package.xml
src/mapping_tools/online_mapping_logger/: README.md  package.xml
src/mapping_tools/online_mapping_logger/src/: session_writer.cpp  session_writer_detail.hpp  session_writer_layout.cpp  session_writer_manifest.cpp  session_writer_records.cpp
src/visual_inertial_odometry/visual_inertial/: CMakeLists.txt  package.xml
src/visual_inertial_odometry/visual_inertial/config/: visual_inertial_params_realsense_splitter.yaml
src/visual_inertial_odometry/visual_inertial/include/visual_inertial/: optimization_node_params.hpp
src/visual_inertial_odometry/visual_inertial/include/visual_inertial/transport/: common_transport.hpp  (+2 more)
src/visual_inertial_odometry/visual_inertial/launch/: realsense_splitter_vio.launch.py
src/visual_inertial_odometry/visual_inertial/msg/: LocalizationPosePrior.msg  OptimizedKeyframePose.msg
src/visual_inertial_odometry/visual_inertial/src/: localization_node.cpp  optimization_node.cpp  optimization_node_params.cpp  path_viz_node.cpp  tracking_node.cpp  tracks_viz_node.cpp
src/visual_inertial_odometry/visual_inertial/src/transport/: localization_transport.cpp
src/visual_inertial_odometry/visual_inertial/test/: test_localization_mode_node_graph.py
src/visual_inertial_odometry/visual_inertial_common/: package.xml
visual_inertial/: CMakeLists.txt  package.xml
visual_inertial/config/: visual_inertial_params.yaml  visual_inertial_params_realsense_splitter.yaml
visual_inertial/launch/: realsense_splitter_vio.launch.py
visual_inertial/msg/: FrontendHealth.msg  FrontendIntervalHealth.msg  Keyframe.msg  OptimizationResult.msg  OptimizationStats.msg
visual_inertial/src/: optimization_node.cpp  tracking_node.cpp
visual_inertial_common/: CMakeLists.txt  package.xml
visual_inertial_common/include/visual_inertial_common/: types.hpp
visual_inertial_lib/: CMakeLists.txt  package.xml
visual_inertial_lib/include/visual_inertial_lib/: feature_detector.hpp  feature_tracker.hpp  keyframe_policy.hpp  odometry.hpp  tracks_buffer.hpp  types.hpp
visual_inertial_lib/src/: feature_detector.cpp  feature_tracker.cpp  keyframe_policy.cpp  odometry.cpp  tracks_buffer.cpp
visual_inertial_localization/: CMakeLists.txt  package.xml
visual_inertial_localization/include/visual_inertial_localization/: localization.hpp
visual_inertial_localization/src/: localization.cpp
visual_inertial_odometry/visual_inertial/: CMakeLists.txt  README.md  package.xml
visual_inertial_odometry/visual_inertial/include/visual_inertial/transport/: frontend_transport.hpp
visual_inertial_odometry/visual_inertial/msg/: ImuBias.msg  LocalizationCommand.msg  LocalizationFeedback.msg  OptimizationStats.msg  Tracks.msg
visual_inertial_odometry/visual_inertial/src/: optimization_node.cpp
visual_inertial_odometry/visual_inertial/src/transport/: common_transport.cpp  frontend_transport.cpp  optimization_transport.cpp
visual_inertial_odometry/visual_inertial/test/: node_graph_test_utils.py
visual_inertial_odometry/visual_inertial_bringup/: CMakeLists.txt  README.md  package.xml
visual_inertial_odometry/visual_inertial_bringup/config/: vio_config.rviz  visual_inertial_params_realsense_splitter.yaml
visual_inertial_odometry/visual_inertial_bringup/launch/: realsense_splitter_vio.launch.py
visual_inertial_odometry/visual_inertial_bringup/test/: node_graph_test_utils.py  test_mapping_mode_node_graph.py
visual_inertial_odometry/visual_inertial_frontend/: CMakeLists.txt  README.md  package.xml
visual_inertial_odometry/visual_inertial_frontend/src/: keyframe_policy.cpp  odometry.cpp
visual_inertial_odometry/visual_inertial_localization/: README.md  package.xml
visual_inertial_odometry/visual_inertial_localization/src/: localization.cpp  localization_controller.cpp  localization_engine.cpp
visual_inertial_odometry/visual_inertial_localization/src/internal/visual_inertial_localization/: localization_engine.hpp
visual_inertial_odometry/visual_inertial_localization/test/: test_localization_controller.cpp
visual_inertial_optimization/: CMakeLists.txt  package.xml
visual_inertial_optimization/include/visual_inertial_optimization/: optimization.hpp  types.hpp
visual_inertial_optimization/src/: optimization.cpp
(+85 files in other folders)
