<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offline_global_graph</name>
  <version>0.1.0</version>
  <description>Offline global factor-graph builder and optimizer for logged mapping sessions.</description>
  <maintainer email="maximilianopalay@gmail.com">max</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>gtsam</build_depend>
  <exec_depend>gtsam</exec_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
