<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_inertial</name>
  <version>0.0.0</version>
  <description>ROS 2 nodes and message definitions for the visual inertial runtime. This package ties together tracking, localization, optimization, and visualization entry points.</description>
  <maintainer email="maximilianopalay@gmail.com">max</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>visual_inertial_frontend</build_depend>
  <exec_depend>visual_inertial_frontend</exec_depend>

  <build_depend>visual_inertial_common</build_depend>
  <exec_depend>visual_inertial_common</exec_depend>

  <build_depend>visual_inertial_localization</build_depend>
  <exec_depend>visual_inertial_localization</exec_depend>

  <build_depend>visual_inertial_optimization</build_depend>
  <exec_depend>visual_inertial_optimization</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>apriltag_msgs</depend>

  <!-- Runtime for generated code -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>
  <depend>tf2_ros</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
