<?xml version="1.0"?>
<package format="3">
  <name>visual_inertial_frontend</name>
  <version>0.1.0</version>
  <description>Stereo tracking and IMU handling for the visual inertial system. It produces keyframes, track state, and frontend health signals.</description>
  <maintainer email="you@example.com">Max Palay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>opencv</depend>
  <depend>visual_inertial_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
