<?xml version="1.0"?>
<package format="3">
  <name>visual_inertial_localization</name>
  <version>0.1.0</version>
  <description>Tag based global pose estimation and correction logic for the visual inertial system.</description>
  <maintainer email="you@example.com">Max Palay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>apriltag_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
