<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_inertial</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="maximilianopalay@gmail.com">max</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>visual_inertial_frontend</build_depend>
  <exec_depend>visual_inertial_frontend</exec_depend>

  <build_depend>visual_inertial_common</build_depend>
  <exec_depend>visual_inertial_common</exec_depend>

  <build_depend>visual_inertial_localization</build_depend>
  <exec_depend>visual_inertial_localization</exec_depend>

  <build_depend>visual_inertial_optimization</build_depend>
  <exec_depend>visual_inertial_optimization</exec_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>apriltag_msgs</depend>

  <!-- Runtime for generated code -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>
  <depend>tf2_ros</depend>
  <exec_depend>realsense_utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>rclpy</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
