<?xml version="1.0"?>
<package format="3">
  <name>visual_inertial_common</name>
  <version>0.1.0</version>
  <description>Shared data types and utility structures used across the visual inertial stack.</description>
  <maintainer email="you@example.com">Max Palay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
